Implement auth and warung timezone
